# bot-to-send-excel-file

./: Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  settings.py
bot/: buttons.py  handlers.py  run.py  services.py  settings.py  states.py
configs/: bot.env  bot.env.example
dockerfiles/: bot.dockerfile
