[tool.poetry]
name = "bot-to-send-excel-file"
version = "0.1.0"
description = ""
authors = ["Daniil Takhtarov <thtrvdnl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.20"
mypy = "^0.960"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
